--- a/src/sass/components/_sideNav.scss
+++ b/src/sass/components/_sideNav.scss
@@ -13,7 +13,8 @@
     left: 1rem;
     .icon {
       margin-block: auto;
-      color: $font-color-light;
+      color: $font-color-dark;
+      cursor: pointer;
     }
     input {
       position: absolute;
@@ -26,11 +27,13 @@
     }
   }
   .navContainer {
-    background-color: $clr-darkblue-1;
+    background-color: $clr-accent-1;
     position: fixed;
     height: 100%;
     top: 0;
     left: 0;
+
+    box-shadow: 0 0 15px $clr-darkblue-3;
 
     transition: transform 300ms ease-in-out;
     &.open {
@@ -57,7 +60,7 @@
     }
     .closeButton {
       position: absolute;
-      background-color: $clr-darkblue-2;
+      background-color: $clr-accent-0;
       display: grid;
       place-items: center;
       border-radius: 50%;
@@ -66,10 +69,11 @@
       // left: calc(100% - 33px);
       right: 2rem;
       font-size: 300%;
+      cursor: pointer;
 
       transition: transform 350ms ease-in-out;
       .icon path {
-        stroke: $font-color-light;
+        stroke: $font-color-darkblue;
       }
     }
 
@@ -95,17 +99,18 @@
           transform: translateX(-100%);
 
           a {
-            color: $font-color-light;
+            color: $font-color-darkblue;
+            font-weight: bold;
             text-decoration: none;
             position: relative;
             &::after {
-              content: '';
+              content: "";
               position: absolute;
               width: 100%;
               height: 2px;
               bottom: -3px;
               left: 0;
-              background: $font-color-light;
+              background: $font-color-darkblue;
 
               transition: transform 150ms ease 50ms;
 
@@ -135,7 +140,7 @@
         display: flex;
         justify-content: space-around;
         li a {
-          color: $font-color-light;
+          color: $font-color-darkblue;
         }
       }
     }
