--- a/src/sass/pages/_error.scss
+++ b/src/sass/pages/_error.scss
@@ -1,5 +1,4 @@
 .errorPage {
-  @include gradientBackground;
   @include fullscreenPage;
   display: grid;
   place-items: center;
@@ -38,7 +37,7 @@
         text-decoration: none;
       }
       &::after {
-        content: '';
+        content: "";
         position: absolute;
         bottom: 0;
         left: 0;
@@ -58,7 +57,7 @@
   }
 
   &::after {
-    content: '404';
+    content: "404";
     overflow: hidden;
     position: absolute;
     margin: 0;
