--- a/src/sass/themes/_defaultTheme.scss
+++ b/src/sass/themes/_defaultTheme.scss
@@ -1,5 +1,6 @@
 $font-color-light: hsl(186, 60%, 68%);
-$font-color-dark: hsl(0, 0%, 0%);
+$font-color-dark: hsl(210, 29%, 2%);
+$font-color-darkblue: hsl(210, 29%, 25%);
 
 $clr-gray-0: hsl(210, 29%, 20%);
 $clr-gray-1: hsl(210, 29%, 21%);
@@ -17,4 +18,19 @@ $clr-darkblue-1: hsl(210, 29%, 15%);
 $clr-darkblue-2: hsl(210, 29%, 20%);
 $clr-darkblue-3: hsl(210, 29%, 25%);
 
+$clr-primary-0: hsl(207, 37%, 37%);
+$clr-primary-1: hsl(207, 37%, 42%);
+$clr-primary-2: hsl(207, 37%, 47%);
+$clr-primary-3: hsl(207, 37%, 52%);
+$clr-primary-4: hsl(207, 37%, 57%);
+
+// $clr-accent-0: hsl(45, 84%, 66%);
+// $clr-accent-1: hsl(45, 84%, 70%);
+$clr-accent-0: hsl(45, 84%, 70%);
+$clr-accent-1: hsl(45, 84%, 75%);
+$clr-accent-2: hsl(44.35, 85.19%, 80%);
+// $clr-accent-0: hsl(207, 37%, 37%);
+// $clr-accent-1: hsl(207, 37%, 42%);
+
 $clr-dark-transparent: rgba(0, 0, 0, 0.2);
+$clr-dark-transparent-2: rgba(0, 0, 0, 0.5);
